// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/series/_seriesIndex.vue renders loaded 1`] = `
<section
  class="section"
>
  <h1
    class="title"
  >
    
  </h1>
   
  <div
    class="b-table"
  >
    <!---->
     
    <!---->
     
    <div
      class="table-wrapper"
    >
      <table
        class="table is-striped"
      >
        <!---->
         
        <tbody>
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          MAKE IT BETTER
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Artist"
            >
              
        mitsu-O!
      
            </td>
             
            <td
              class=""
              data-label="BPM"
            >
              
        119
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          PARANOiA
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Artist"
            >
              
        180
      
            </td>
             
            <td
              class=""
              data-label="BPM"
            >
              
        180
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
          <tr
            class=""
            draggable="false"
          >
            <!---->
             
            <!---->
             
            <td
              class=""
              data-label="Name"
            >
              <a>
                
          TRIP MACHINE
        
              </a>
            </td>
             
            <td
              class=""
              data-label="Artist"
            >
              
        DE-SIRE
      
            </td>
             
            <td
              class=""
              data-label="BPM"
            >
              
        160
      
            </td>
             
            <!---->
          </tr>
           
          <!---->
           
          <!---->
        </tbody>
         
        <!---->
      </table>
    </div>
     
    <div
      class="level"
    >
      <div
        class="level-left"
      />
       
      <div
        class="level-right"
      >
        <div
          class="level-item"
        >
          <nav
            class="pagination"
          >
            <a
              class="pagination-link pagination-previous"
              disabled="disabled"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
                class="icon"
              >
                <i
                  class="mdi mdi-chevron-left mdi-24px"
                />
              </span>
            </a>
             
            <a
              class="pagination-link pagination-next"
              disabled="disabled"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
                class="icon"
              >
                <i
                  class="mdi mdi-chevron-right mdi-24px"
                />
              </span>
            </a>
             
            <ul
              class="pagination-list"
            >
              <!---->
               
              <!---->
               
              <li>
                <a
                  aria-current="true"
                  class="pagination-link is-current "
                  href="#"
                  role="button"
                >
                  1
                </a>
              </li>
               
              <!---->
               
              <!---->
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`/series/_seriesIndex.vue renders loading 1`] = `
<section
  class="section"
>
  <h1
    class="title"
  >
    
  </h1>
   
  <div
    class="b-table is-loading"
  >
    <!---->
     
    <!---->
     
    <div
      class="table-wrapper"
    >
      <table
        class="table is-striped"
      >
        <!---->
         
        <tbody>
          <tr
            class="is-empty"
          >
            <td
              colspan="0"
            >
              <section
                class="section"
              >
                <div
                  class="content has-text-grey has-text-centered"
                >
                  <p>
                    Nothing here.
                  </p>
                </div>
              </section>
            </td>
          </tr>
        </tbody>
         
        <!---->
      </table>
    </div>
     
    <div
      class="level"
    >
      <div
        class="level-left"
      />
       
      <div
        class="level-right"
      >
        <div
          class="level-item"
        >
          <nav
            class="pagination"
          >
            <a
              class="pagination-link pagination-previous"
              disabled="disabled"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
                class="icon"
              >
                <i
                  class="mdi mdi-chevron-left mdi-24px"
                />
              </span>
            </a>
             
            <a
              class="pagination-link pagination-next"
              disabled="disabled"
              href="#"
              role="button"
            >
              <span
                aria-hidden="true"
                class="icon"
              >
                <i
                  class="mdi mdi-chevron-right mdi-24px"
                />
              </span>
            </a>
             
            <ul
              class="pagination-list"
            >
              <!---->
               
              <!---->
                
              <!---->
               
              <!---->
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
</section>
`;
